Add calculate button functionality

--- a/BMI Calculator/Views/Base.lproj/Main.storyboard
+++ b/BMI Calculator/Views/Base.lproj/Main.storyboard
@@ -54,6 +54,9 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="N8B-Dy-l4J"/>
                                         </constraints>
+                                        <connections>
+                                            <action selector="heightSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="IzQ-6b-oXZ"/>
+                                        </connections>
                                     </slider>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="bLN-iE-rgh" userLabel="Weight Stack View">
                                         <rect key="frame" x="0.0" y="609" width="361" height="20"/>
@@ -80,6 +83,9 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="KBD-vd-XPM"/>
                                         </constraints>
+                                        <connections>
+                                            <action selector="weightSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="eWA-ac-XIr"/>
+                                        </connections>
                                     </slider>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tqz-u6-T9C">
                                         <rect key="frame" x="0.0" y="709" width="361" height="50"/>
@@ -91,6 +97,9 @@
                                         <state key="normal" title="CALCULATE">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="calculatePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="r7J-Be-jJS"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -108,6 +117,12 @@
                             <constraint firstAttribute="bottom" secondItem="BpM-jp-aF1" secondAttribute="bottom" id="t3C-Xv-mvg"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="heightLable" destination="3tu-50-IEi" id="J9h-Jt-QVK"/>
+                        <outlet property="heightSlider" destination="SU1-8S-edc" id="dyQ-hW-vfz"/>
+                        <outlet property="weightLable" destination="D4K-jU-4nh" id="XV5-h2-JU0"/>
+                        <outlet property="weightSlider" destination="0Ze-a4-e8r" id="pUn-aX-LZz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
